--- a/workshop/views/atelier.html
+++ b/workshop/views/atelier.html
@@ -32,6 +32,7 @@
 <body>
     <!-- Header avec la navigation -->
     <header>
+        <h1>CleanWeb</h1>
         <nav>
             <ul>
                 <li><a href="/">Accueil</a></li>
@@ -62,6 +63,7 @@
             <p><strong>Heure :</strong> 14h00 - 16h00</p>
             <p>Un atelier pratique pour apprendre à identifier les emails et les sites Web frauduleux.</p>
             <a href="#" class="button" id="register-button-1">Inscrivez-vous</a>
+            <a href="phishing.html" id="demo-button" class="button">Démonstration</a>
         </div>
 
         <div class="atelier-event">
@@ -70,6 +72,7 @@
             <p><strong>Heure :</strong> 14h00 - 16h00</p>
             <p>Apprenez les meilleures pratiques pour éviter les arnaques en ligne.</p>
             <a href="#" class="button" id="register-button-2">Inscrivez-vous</a>
+            <a href="arnaque.html" id="demo-button" class="button">Démonstration</a>
         </div>
     </section>
 
