--- a/workshop/views/forum.html
+++ b/workshop/views/forum.html
@@ -9,6 +9,7 @@
 <body>
     <!-- Header avec la navigation -->
     <header>
+        <h1>CleanWeb</h1>
         <nav>
             <ul>
                 <li><a href="/">Accueil</a></li>
