--- a/workshop/views/arnaque.html
+++ b/workshop/views/arnaque.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/styles.css">
     <title>Démonstration Arnaque</title>
+    <link rel="icon" href="images/logo.ico" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -23,7 +24,7 @@
     
      <!-- Footer -->
      <footer>
-        <p>© 2024 CleanWeb. WORKSHOP 2024 - Aymeric, Anthony, Flavien et Juliette.</p>
+        <p>© 2024 Gardiens du Web. WORKSHOP 2024 - Aymeric, Anthony, Flavien et Juliette.</p>
     </footer>
 </body>
 </html>
