--- a/workshop/views/article1.html
+++ b/workshop/views/article1.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CleanWeb - Titre de l'Article 1</title>
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="icon" href="images/logo.ico" type="image/x-icon">
 </head>
 <body>
     <!-- Header avec la navigation -->
