--- a/workshop/views/atelier.html
+++ b/workshop/views/atelier.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CleanWeb - Atelier</title>
+    <title>Gardiens du Web - Atelier</title>
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="icon" href="images/logo.ico" type="image/x-icon">
     <style>
         /* Styles pour la pop-up */
         #popup {
@@ -32,7 +33,8 @@
 <body>
     <!-- Header avec la navigation -->
     <header>
-        <h1>CleanWeb</h1>
+        <h1>Gardiens du Web</h1>
+        <img src="images/logo.png" alt="Logo de Gardiens du Web" class="logo">
         <nav>
             <ul>
                 <li><a href="/">Accueil</a></li>
@@ -85,7 +87,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>© 2024 CleanWeb. WORKSHOP 2024 - Aymeric, Anthony, Flavien et Juliette.</p>
+        <p>© 2024 Gardiens du Web. WORKSHOP 2024 - Aymeric, Anthony, Flavien et Juliette.</p>
     </footer>
 
 
