ajout des articles

--- a/workshop/views/arnaque.html
+++ b/workshop/views/arnaque.html
@@ -8,8 +8,18 @@
     <link rel="icon" href="images/logo.ico" type="image/x-icon">
 </head>
 <body>
+    <!-- Header avec la navigation -->
     <header>
-        <h1>Démonstration Arnaque</h1>
+        <h1>Gardiens du Web</h1>
+        <img src="images/logo.png" alt="Logo de Gardiens du Web" class="logo">
+        <nav>
+            <ul>
+                <li><a href="/">Accueil</a></li>
+                <li><a href="article.html">Articles</a></li>
+                <li><a href="forum.html">Forum</a></li>
+                <li><a href="atelier.html">Atelier</a></li>
+            </ul>
+        </nav>        
     </header>
     
     <main>
@@ -17,9 +27,9 @@
             <h2>Exemple d'arnaque</h2>
             <img src="chemin/vers/image2.jpg" alt="Exemple d'arnaque">
             <p>Description de l'image ou explication.</p>
-        </section>
 
-        <a href="atelier.html" class="button" id="back-button">Retour à l'atelier</a>
+            <a href="atelier.html" class="button" id="back-button">Retour à l'atelier</a>
+        </section>
     </main>
     
      <!-- Footer -->
