--- a/workshop/views/article.html
+++ b/workshop/views/article.html
@@ -28,19 +28,20 @@
         <p>Découvrez nos derniers articles sur la sécurité en ligne et les bonnes pratiques pour naviguer sur Internet.</p>
 
         <article class="article">
-            <h2><a href="article1.html">Titre de l'article 1</a></h2>
-            <p>Résumé de l'article 1... <a href="article1.html">Lire la suite</a></p>
-        </article>
+            <h2><a href="article1.html">Bonnes pratiques pour identifier et signaler les contenus toxiques en ligne</a></h2>
+            <p>Dans cet article, découvrez comment identifier les contenus nuisibles tels que les discours haineux, le harcèlement et la désinformation. Apprenez à signaler efficacement ces contenus en utilisant les outils à votre disposition, tout en contribuant à un web plus sain... <a href="article1.html">Lire la suite</a></p>
+        </article>        
 
         <article class="article">
-            <h2><a href="article2.html">Titre de l'article 2</a></h2>
-            <p>Résumé de l'article 2... <a href="article2.html">Lire la suite</a></p>
-        </article>
+            <h2><a href="article2.html">Comment se protéger contre le harcèlement en ligne</a></h2>
+            <p>Découvrez des conseils pratiques pour reconnaître, éviter et réagir face au harcèlement en ligne, ainsi que les outils et recours disponibles pour se protéger... <a href="article2.html">Lire la suite</a></p>
+        </article>        
 
         <article class="article">
-            <h2><a href="article3.html">Titre de l'article 3</a></h2>
-            <p>Résumé de l'article 3... <a href="article3.html">Lire la suite</a></p>
+            <h2><a href="article3.html">Les effets des discours de haine sur la santé mentale et comment les combattre</a></h2>
+            <p>Apprenez à reconnaître les discours de haine en ligne et découvrez les conséquences graves sur la santé mentale, ainsi que des moyens pour les signaler et y faire face... <a href="article3.html">Lire la suite</a></p>
         </article>
+        
 
         <!-- Ajoute plus d'articles ici -->
     </section>
