--- a/workshop/views/index.html
+++ b/workshop/views/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SocialShield - Accueil</title>
+    <title>Gardiens du Web - Accueil</title>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="icon" href="images/logo.ico" type="image/x-icon">
 </head>
@@ -33,7 +33,7 @@
         <h2>À propos</h2>
         <p>À l'ère numérique actuelle, la présence en ligne est omniprésente, mais elle s'accompagne également de nombreux défis. <strong>Gardiens du Web</strong> est une initiative conçue pour rendre Internet plus sûr et plus agréable pour tous les utilisateurs. Notre objectif principal est de lutter contre les contenus toxiques, qu'il s'agisse de discours haineux, de harcèlement en ligne ou de fausses informations.</p>
 
-        <h3>Nos Objectifs</h3>
+        <h3>Nos objectifs</h3>
         <ul>
             <li><strong>Sensibilisation</strong> : Sensibiliser les utilisateurs sur les dangers liés aux contenus nuisibles et leur fournir des outils pour les identifier.</li>
             <li><strong>Éducation</strong> : Offrir des formations sur les meilleures pratiques pour signaler et gérer les contenus inappropriés.</li>
@@ -41,7 +41,7 @@
             <li><strong>Engagement</strong> : Inciter chaque utilisateur à participer activement à la création d'un web plus sain.</li>
         </ul>
 
-        <h3>Pourquoi Participer ?</h3>
+        <h3>Pourquoi participer ?</h3>
         <p>En rejoignant Gardiens du Web, vous devenez une voix dans le mouvement pour un Internet plus sûr. Que ce soit en lisant nos articles, en participant à nos ateliers ou en contribuant au forum, chaque action compte.</p>
     </section>
 
