ajout de la page aide

--- a/workshop/views/article.html
+++ b/workshop/views/article.html
@@ -15,9 +15,10 @@
         <nav>
             <ul>
                 <li><a href="/">Accueil</a></li>
-                <li><a href="articles.html">Articles</a></li>
+                <li><a href="article.html">Articles</a></li>
                 <li><a href="forum.html">Forum</a></li>
                 <li><a href="atelier.html">Atelier</a></li>
+                <li><a href="aide.html">Aide</a></li>
             </ul>
         </nav>        
     </header>
@@ -42,8 +43,7 @@
             <p>Apprenez à reconnaître les discours de haine en ligne et découvrez les conséquences graves sur la santé mentale, ainsi que des moyens pour les signaler et y faire face... <a href="article3.html">Lire la suite</a></p>
         </article>
         
-
-        <!-- Ajoute plus d'articles ici -->
+        <a href="/" class="button">Retour à l'accueil</a>
     </section>
 
     <!-- Footer -->
