--- a/workshop/views/article2.html
+++ b/workshop/views/article2.html
@@ -18,6 +18,7 @@
                 <li><a href="article.html">Articles</a></li>
                 <li><a href="forum.html">Forum</a></li>
                 <li><a href="atelier.html">Atelier</a></li>
+                <li><a href="aide.html">Aide</a></li>
             </ul>
         </nav>        
     </header>
@@ -26,7 +27,7 @@
     <section id="article-content">
         <h1>Comment se Protéger contre le harcèlement en ligne</h1>
         <p><em>Publié le 15 octobre 2024 par Gardiens du Web</em></p>
-        
+
         <p>Le harcèlement en ligne, aussi appelé cyberharcèlement, est devenu un problème croissant dans notre société hyperconnectée. Il peut prendre plusieurs formes : insultes, menaces, divulgation d’informations personnelles, etc. Cet article vous propose des conseils pour vous protéger et réagir efficacement face à ce type de harcèlement.</p>
         
         <h2>1. Reconnaître le harcèlement en ligne</h2>
