--- a/workshop/views/atelier.html
+++ b/workshop/views/atelier.html
@@ -41,6 +41,7 @@
                 <li><a href="article.html">Articles</a></li>
                 <li><a href="forum.html">Forum</a></li>
                 <li><a href="atelier.html">Atelier</a></li>
+                <li><a href="aide.html">Aide</a></li>
             </ul>
         </nav>        
     </header>
@@ -76,6 +77,8 @@
             <a href="#" class="button" id="register-button-2">Inscrivez-vous</a>
             <a href="arnaque.html" id="demo-button" class="button">Démonstration</a>
         </div>
+
+        <a href="/" class="button">Retour à l'accueil</a>
     </section>
 
     <!-- Pop-up d'inscription -->
