--- a/workshop/views/index.html
+++ b/workshop/views/index.html
@@ -18,6 +18,7 @@
                 <li><a href="article.html">Articles</a></li>
                 <li><a href="forum.html">Forum</a></li>
                 <li><a href="atelier.html">Atelier</a></li>
+                <li><a href="aide.html">Aide</a></li>
             </ul>
         </nav>        
     </header>
@@ -64,6 +65,13 @@
         <h2>Ateliers</h2>
         <p>Participez à nos ateliers pour apprendre à signaler et gérer les contenus en ligne de manière responsable.</p>
         <a href="atelier.html" class="button">Découvrir nos ateliers</a>
+    </section>
+
+    <!-- Section Aide -->
+    <section id="aide" class="content-section">
+        <h2>Aide et Ressources</h2>
+        <p>Vous trouverez ici les liens vers des ressources officielles pour signaler des contenus nuisibles ainsi que des numéros d'urgence.</p>
+        <a href="aide.html" class="button">Accéder à la page Aide</a>
     </section>
 
     <!-- Footer -->
